# reports

./: .gitignore  Claude.md  README.md  debug_gsc.py  dump_section_1.html  dump_section_1.txt  dump_snapshot.html  dump_snapshot2.txt  main.py  pptx-client-side-rendering.md  pyproject.toml  reports.ipynb  test.py  test_slide6.pptx  test_slide7.pptx  test_slides_1_5.pptx  test_slides_1_7.pptx
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-08-2026-template-pipeline.md  2026-04-08-preview-edit-feature.md
frontend/: .gitignore  CLAUDE.md  README.md  econet-ai-04-March-2026.pptx  package-lock.json  package.json  svelte.config.js
frontend/.playwright-mcp/: page-2026-04-15T11-09-45-498Z.yml  page-2026-04-15T11-11-40-418Z.yml  page-2026-04-15T11-11-51-030Z.yml  page-2026-04-15T11-12-04-855Z.yml  page-2026-04-15T11-12-11-764Z.yml  page-2026-04-15T11-12-18-968Z.yml  page-2026-04-15T11-14-13-974Z.yml
frontend/src/: app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
frontend/src-tauri/binaries/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build_dmg.sh  build_sidecar.py  charts.py  extract_pptx_text.py  fetch_illustrations.py  find_chrome_accounts.py  make_svelte_illustrations.py  test_ga4_navigation.py  test_snapshot_html.py
src/reports/: app.py  auth_session.py  browser_support.py  charts.py  chrome_profiles.py  db.py  extractors.py  generator.py  generator_2026.py  logging_utils.py  runtime.py  schemas.py  slides.py  template_runner.py
(+40 files in other folders)
