[project]
name = "reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "google-genai>=1.65.0",
    "googlesearch-python>=1.3.0",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pyinstaller>=6.16.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "uvicorn[standard]>=0.41.0",
]
